# dev-experience

./: .gitignore  ACCESS-CONTROL.md  AI-POLICY-v2.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.md  setup.ps1  setup.sh
.github/: CODEOWNERS
agentic-tools/claude-code/statusline/: statusline.ps1
agentic-tools/gemini-cli/: README.md
agentic-tools/pdf-producer/: README.md  markdown_to_pdf.py  md2pdf  md2pdf.ps1
agentic-tools/speech-to-text/: README.md  WISPRFLOW.md
agentic-tools/speech-to-text/local_whisper/: audio.py  (+5 more)
brand/: README.md
claude-code/: CLAUDE_CODE_SETUP.md  README.md  claude-code-vertex-setup.md
claude-code/agentic-tools/: CLAUDE.md  config.py  conversation-search.py
claude-code/statusline/: statusline.sh
docs/: GOOGLE_DRIVE_SETUP.md  PENTEST_MCP_SETUP.md  PERSONA_BYPASS_SPEC.md  RED_TEAM_ANALYSIS.md  claude-code-vertex-setup.md
fedramp-vertex-ai-model-garden/: validate-vertex-setup.sh
legal/: 250813 LICENSE CORPORATION - AI Policy.md  AI-POLICY-v2.md
services/: README.md  conversation-indexer.py  daily-dashboard.py  daily-summary.py  indexer-watch.py
setup/: setup.ps1  setup.sh
setup/windows/: README.md  validate-vertex-setup.ps1
skills/search-history/: SKILL.md
speech-to-text/: README.md
speech-to-text/whisperflow/: hotkey.py  run.py
vertex-ai-model-garden/: README.md
vertex-ai-model-garden/windows/: README.md
whisperflow/: BUILD.bazel  __init__.py  audio.py  main.py  pyproject.toml  requirements.txt
whisperflow/ui/: main_window.py
whisperflow/utils/: clipboard.py  logger.py  media.py
(+19 files in other folders)
