load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "whisperflow_lib",
    srcs = glob(["**/*.py"], exclude = ["run.py", "main.py"]),
    visibility = ["//visibility:public"],
)

py_binary(
    name = "whisperflow",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":whisperflow_lib"],
    visibility = ["//visibility:public"],
)
