[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperflow"
version = "0.1.0"
description = "Local speech-to-text with hotkey activation"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "PyQt6>=6.5.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "pyautogui>=0.9.54",
]

[project.scripts]
whisperflow = "whisperflow.main:main"

[tool.setuptools.packages.find]
where = ["."]
